First working version published.

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,12 +1,12 @@
 {{ define "main" }}
 
-<!-- blogs -->
+<!-- newsletters -->
 <section class="section">
   <div class="container">
     <div class="row">
       <div class="col-lg-8 order-2 order-lg-1">
         <div class="row">
-          <!-- blog post -->
+          <!-- newsletter -->
           {{ $paginator := .Paginate ( where .Data.Pages "Type" "post") }}
           {{ range $paginator.Pages }}
           <div class="col-sm-6 mb-5">
@@ -20,9 +20,11 @@
                   <li class="list-inline-item mr-3 ml-0"><i class="ti-calendar"></i>
                     {{ .PublishDate.Format "02 Jan, 2006" }}</li>
                   <!-- author -->
+                  <!--
                   <li class="list-inline-item mr-3 ml-0"><i class="ti-user"></i> <a
                       href="{{ `author/` | relLangURL }}{{ .Params.Author | urlize }}">{{ .Params.Author | title }}</a>
                   </li>
+                   -->
                 </ul>
                 <h4 class="card-title"><a href="{{ .Permalink }}">{{ .Title }}</a></h4>
                 <p class="card-text">{{ .Summary | truncate 100 }}</p>
@@ -36,10 +38,10 @@
           </div>
         </div>
       </div>
-      {{ partial "blog-sidebar.html" . }}
+      {{ partial "news-sidebar.html" . }}
     </div>
   </div>
 </section>
-<!-- /blogs -->
+<!-- /newsletters -->
 
 {{ end }}
