--- a/layouts/contact/list.html
+++ b/layouts/contact/list.html
@@ -30,14 +30,13 @@
 <!-- /contact -->
 
 <!-- gmap -->
-<section class="section pt-0">
-  <!-- Google Map -->
+<!-- <section class="section pt-0">
   <div id="map_canvas" 
   data-latitude="{{ site.Params.map.map_latitude }}"
   data-longitude="{{ site.Params.map.map_longitude }}" 
   data-marker="{{ site.Params.map.map_marker | absURL }}"
   data-marker-name="{{ site.Title }}"></div>
-</section>
+</section> -->
 <!-- /gmap -->
 
 {{ end }}
