--- a/layouts/about/list.html
+++ b/layouts/about/list.html
@@ -44,7 +44,8 @@
 <!-- /success story -->
 
 <!-- teacher -->
-{{ if $data.homepage.blog.enable }}
+<!--
+    {{ if $data.homepage.news.enable }}
 <section class="section">
   <div class="container">
     <div class="row">
@@ -53,7 +54,6 @@
       </div>
     </div>
     <div class="row justify-content-center">
-      <!-- teacher -->
       {{ range first 3 (where site.RegularPages "Type" "teacher")}}
       <div class="col-lg-4 col-sm-6 mb-5 mb-lg-0">
         {{ .Render "teacher" }}
@@ -63,6 +63,7 @@
   </div>
 </section>
 {{ end }}
+-->
 <!-- /teacher -->
 
 {{ end }}
