--- a/layouts/partials/success-story.html
+++ b/layouts/partials/success-story.html
@@ -12,7 +12,7 @@
       <div class="col-lg-6 col-sm-8">
         <div class="bg-white p-5">
           <h2 class="section-title">{{ .title | markdownify }}</h2>
-          <p>{{ .content | markdownify }}</p>
+          <p><a class="venobox" href="{{ .video_link | safeURL }}" data-vbtype="video">{{ .content | markdownify }}</a></p>
         </div>
       </div>
     </div>
