--- a/layouts/_default/event.html
+++ b/layouts/_default/event.html
@@ -2,7 +2,15 @@
     <a href="{{ .Permalink }}">
         <div class="card-img position-relative">
             <img class="card-img-top rounded-0" src="{{ .Params.image | relURL }}" alt="{{ .Title }}">
+            {{ if isset .Params "enddate" }}
+                {{ if ne (.Date.Format "Jan") (dateFormat "Jan" .Params.EndDate)}}
+                <div class="card-date"><span>{{ .Date.Format "02" }} - {{ dateFormat "02" .Params.EndDate }}</span><br>{{ .Date.Format "Jan" }}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{ dateFormat "Jan" .Params.EndDate }}</div>
+                {{ else}}
+                <div class="card-date"><span>{{ .Date.Format "02" }} - {{ dateFormat "02" .Params.EndDate }}</span><br>{{ .Date.Format "Jan" }}</div>
+                {{ end }}
+            {{ else }}
             <div class="card-date"><span>{{ .Date.Format "02" }}</span><br>{{ .Date.Format "Jan" }}</div>
+            {{ end }}
         </div>
         <div class="card-body">
             <!-- location -->
