--- a/layouts/event/single.html
+++ b/layouts/event/single.html
@@ -25,6 +25,8 @@
                         </div>
                     </div>
                 </li>
+                {{ if isset .Params "hide_date" }}
+                {{else}}
                 <li class="list-inline-item mr-xl-5 mr-4 mb-3 mb-lg-0">
                     <div class="d-flex align-items-center">
                         <i class="ti-calendar text-primary icon-md mr-2"></i>
@@ -43,6 +45,7 @@
                         </div>
                     </div>
                 </li>
+                {{end}}
                 {{ if isset .Params "hide_time" }}
                 {{else}}
                 <li class="list-inline-item mr-xl-5 mr-4 mb-3 mb-lg-0">
