--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -17,11 +17,14 @@ body {
 }
 
 p, .paragraph {
-  font-weight: 400;
-  color: $text-color;
-  font-size: 15px;
-  line-height: 1.9;
-  font-family: $primary-font;
+    font-weight: 400;
+    color: $text-color;
+    font-size: 20px;
+    line-height: 1.4;
+    @include mobile {
+        font-size: 15px;
+    }
+    font-family: $primary-font;
 }
 
 h1,h2,h3,h4,h5,h6 {
@@ -53,7 +56,7 @@ h3, .h3{
 }
 
 h4, .h4{
-  font-size: 20px;
+  font-size: 22px;
   @include mobile {
     font-size: 18px;
   }
