--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,7 +1,7 @@
 // Color Variables
 $primary-color: #ffbc3b;
 $secondary-color: #1a1a37;
-$text-color: #5c5c77;
+$text-color: #000; //#5c5c77;
 $text-color-light: #8585a4;
 $text-color-dark: #1e1e4b;
 $body-color: #fff;
